--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,28 @@
   text-align: center;
 }
 
+.app-container {
+  width: 100%;
+  height: 100vh;
+  background-image: url('./assets/jw-wallpaper.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.content-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Optional: adds dark overlay */
+}
+
 .logo {
-  height: 6em;
+  height: 10em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
@@ -16,6 +36,11 @@
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+.title {
+  color: rgba(255, 255, 255, 0.5);
+  margin: 1em 0;
 }
 
 .questionBlock {
@@ -30,7 +55,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
+    color: wheat;
+
+    width: 100%;
+    min-height: 150px;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
   }
 }
 
