--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,15 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .title {
   color: rgba(255, 255, 255, 0.5);
   margin: 1em 0;
@@ -67,6 +76,23 @@
     justify-content: center;
     align-items: center;
 
+  }
+
+  .card-animate {
+    opacity: 0;
+    animation: slideIn 0.8s ease-out forwards;
+  }
+  
+  .card-animate:nth-child(1) {
+    animation-delay: 1.5s;
+  }
+  
+  .card-animate:nth-child(2) {
+    animation-delay: 2.5s;
+  }
+  
+  .card-animate:nth-child(3) {
+    animation-delay: 3.5s;
   }
 }
 
@@ -110,12 +136,14 @@
   transition: all 0.5s ease;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translate(-100px, 100px);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
   }
 }
 
