--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@
 .app-container {
   width: 100%;
   height: 100vh;
-  background-image: url('./assets/jw-wallpaper.jpg');
+  /* background-image: url('./assets/backgrounds/jw-wallpaper.jpg'); */
+  animation: backgroundChange 45s infinite;
+  animation-timing-function: ease-in-out;
+  transition: opacity 1.5s ease-in-out;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -23,6 +26,29 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Optional: adds dark overlay */
+}
+
+@keyframes backgroundChange {
+  0%, 20% {
+    background-image: url('./assets/backgrounds/jw-wallpaper.jpg');
+    opacity: 1;
+  }
+  25%, 45% {
+    background-image: url('./assets/backgrounds/jurassic-world-raptors-for-wallpaper-engine-v0-FjPONZMSzfREyfdaflzIIc2m5Bu0VWKxP6uttVQAgW4.jpg.webp');
+    opacity: 1;
+  }
+  50%, 70% {
+    background-image: url('./assets/backgrounds/df761et-c849b320-5f54-4885-b283-9e56b5d3a31b.jpg');
+    opacity: 1;
+  }
+  75%, 95% {
+    background-image: url('./assets/backgrounds/jurassic-park-ucyjkewbywehk7ij.jpg');
+    opacity: 1;
+  }
+  96%, 100% {
+    background-image: url('./assets/backgrounds/jw-wallpaper.jpg');
+    opacity: 1;
+  }
 }
 
 .logo {
